--- a/dashboard-service-order/public/index.html
+++ b/dashboard-service-order/public/index.html
@@ -18,7 +18,7 @@
           <div class="form-grid">
             <label>
               Número da OS
-              <input type="text" id="osNumber" placeholder="Ex.: 123456" required />
+              <input type="text" id="osNumber" placeholder="Ex: 123456" required />
             </label>
 
             <label>
