--- a/dashboard-service-order/public/index.html
+++ b/dashboard-service-order/public/index.html
@@ -18,12 +18,12 @@
           <div class="form-grid">
             <label>
               Número da OS
-              <input type="number" id="osNumber" placeholder="Ex: 123456" required />
+              <input type="number" id="osNumber" min="1" placeholder="Ex: 123456" required />
             </label>
 
             <label>
               Colaborador
-              <input type="text" id="collaboratorName" placeholder="Nome do colaborador" pattern="[A-Za-z\s]+" requiredarru />
+              <input type="text" id="collaboratorName" placeholder="Nome do colaborador" pattern="[A-Za-z\s]+" required />
             </label>
 
             <label>
